# Trestle

./: .gitignore
crates/trestle/: Cargo.toml
crates/trestle-tests/: Cargo.toml
crates/trestle-tests/programs/: README.md
crates/trestle-tests/programs/01-basics/: README.md  arithmetic.trsl  precedence-and-grouping.trsl
crates/trestle-tests/programs/02-functions/: README.md  arrow-functions.trsl  currying.trsl  partial-application.trsl
crates/trestle-tests/programs/03-pipelines/: builder-as-pipeline.trsl  single-line-pipe.trsl
crates/trestle-tests/programs/04-values-and-types/: README.md  booleans-and-comparison.trsl  floats-and-negatives.trsl  strings.trsl
crates/trestle-tests/programs/05-control-flow/: README.md  if-else-expression.trsl  match-expression.trsl
crates/trestle-tests/programs/06-records-and-adts/: README.md  algebraic-data-types.trsl  field-access.trsl
crates/trestle-tests/programs/07-generics/: generic-functions.trsl  higher-order-data-types.trsl
crates/trestle-tests/programs/08-effects/: README.md  main-as-effect.trsl  railway-errors.trsl
crates/trestle-tests/src/: lib.rs
crates/trestle-tests/tests/: corpus.rs
crates/trestle-tests/tests/snapshots/: corpus__corpus_ast_snapshots@01-basics__arithmetic.trsl.snap  corpus__corpus_ast_snapshots@01-basics__basics.trsl.snap  corpus__corpus_ast_snapshots@01-basics__precedence-and-grouping.trsl.snap
crates/trestle/src/: analysis.rs  ast.rs  checked.rs  evaluation.rs  lib.rs  main.rs  trestle.pest
crates/trestle/src/analyse/: analysed.rs  mod.rs  (+3 more)
crates/trestle/tests/: corpus.rs
(+242 files in other folders)
