[package]
name = "trestle-tests"
version = "0.1.0"
edition = "2024"
publish = false

# The parser under test. A dev-dependency because only the test harness uses it.
[dev-dependencies]
trestle = { path = "../trestle" }
# Snapshot testing for the parsed AST. `glob` feature enables `insta::glob!`.
insta = { version = "1", features = ["glob"] }
